<resources>
    <string name="date">22 Oct 2015</string>
    <string name="displayName">Motlatsi Seotsanyana</string>
    <string name="website">https://en.wikipedia.org/wiki/Film</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="fa_admin">&#xf0c0;</string>
    <string name="fa_profile">&#xf007;</string>
    <string name="fa_notification">&#xf0f3;</string>
    <string name="fa_setting">&#xf013;</string>
    <string name="fa_upload">&#xf093;</string>
    <string name="fa_download">&#xf019;</string>
    <string name="fa_logout">&#xf08b;</string>
    <string name="fa_chevron_right">&#xf054;</string>
    <string name="fa_chevron_down">&#xf078;</string>
    <string name="fa_home">&#xf015;</string>
    <string name="fa_login">&#xf090;</string>
    <string name="fa_address">&#xf015;</string>
    <string name="fa_email">&#xf1fa;</string>
    <string name="fa_website">&#xf0ac;</string>
    <string name="fa_phone">&#xf098;</string>
    <string name="fa_plus">&#xf067;</string>
    <string name="fa_minus">&#xf068;</string>
    <string name="fa_angle_up">&#xf106;</string>
    <string name="fa_angle_down">&#xf107;</string>
    <string name="fa_ellipsis_h">&#xf141;</string>
    <string name="fa_exclamation_triangle">&#xf071;</string>
    <string name="fa_filter">&#xf0b0;</string>
    <string name="fa_calendar">&#xf073;</string>
    <string name="fa_create">&#xf0fe;</string>
    <string name="fa_read">&#xf02d;</string>
    <string name="fa_update">&#xf044;</string>
    <string name="fa_delete">&#xf1f8;</string>
    <string name="fa_sync">&#xf021;</string>
    <string name="fa_save">&#xf0c7;</string>
    <string name="fa_actions">&#xf022;</string>
    <string name="fa_details">&#xf1e5;</string>
    <string name="fa_group">&#xf0c0;</string>
    <string name="fa_join">&#xf2b5;</string>
    <string name="fa_change">&#xf0ec;</string>
    <string name="fa_location">&#xf041;</string>
    <string name="fa_organization">&#xf1ad;</string>
    <string name="fa_logframe">&#xf018;</string>
    <string name="fa_perms">&#xf085;</string>
    <string name="fa_com_attr">&#xf057;</string>
    <string name="fa_clock">&#xf017;</string>
    <string name="blank_string">" "</string>
    <string name="Create">Create</string>
    <string name="Read">Read</string>
    <string name="Update">Update</string>
    <string name="Delete">Delete</string>
    <string name="Sync">Sync</string>
    <string name="Upload">Upload</string>
    <string name="Download">Download</string>
    <string name="Deleted">Deleted</string>
    <string name="Blocked">Blocked</string>
    <string name="Activated">Activated</string>
    <string name="Cancelled">Cancelled</string>
    <string name="Pending">Pending</string>
    <string name="Save">Save</string>
    <string name="Cancel">Cancel</string>
    <string name="Reset">Reset</string>
    <string name="Yes">Yes</string>
    <string name="No">No</string>
    <string name="Ok">OK</string>
    <string name="Cloud">Cloud</string>
    <string name="Village">Village</string>
    <string name="House">House</string>
    <string name="Room">Room</string>
    <string name="Owner">Owner</string>
    <string name="createdOn">created on:</string>
    <string name="modifiedOn">modified on:</string>
    <string name="syncedOn">synced on:</string>
    <string name="individualOwner">individual owner:</string>
    <string name="organizationOwner">organization owner:</string>
    <string name="common_created_on">created on: </string>
    <string name="common_modified_on">modified on: </string>
    <string name="common_about">About</string>
    <string name="common_home">Home</string>
    <string name="common_search">Search</string>
    <string name="common_upload">Upload</string>
    <string name="common_download">Download</string>
    <string name="common_logout">Logout</string>
    <string name="notification_name_caption">notification</string>
    <string name="project_list_title">Projects</string>
    <string name="project_create_title">ADD PROJECT</string>
    <string name="project_update_title">UPDATE PROJECT</string>
    <string name="logframe_list_title">Logical Frameworks</string>
    <string name="logframe_create_title">ADD LOGFRAME</string>
    <string name="logframe_update_title">UPDATE LOGFRAME</string>
    <string name="logframe_organization_caption">organization</string>
    <string name="logframe_name_caption">logical framework</string>
    <string name="logframe_description_caption">description</string>
    <string name="logframe_startdate_caption">start date: </string>
    <string name="logframe_enddate_caption">end date: </string>
    <string name="address_hint_street">Street</string>
    <string name="address_hint_city">City</string>
    <string name="address_hint_province">Province</string>
    <string name="address_hint_postal_code">Postal Code</string>
    <string name="address_hint_country">Country</string>
    <string name="user_login">LOGIN</string>
    <string name="user_sign_up">Sign Up</string>
    <string name="user_sign_in">Sign In</string>
    <string name="user_change_password">Change Password?</string>
    <string name="user_confirm_change_password">Change Password</string>
    <string name="user_forgot_password">Forgot Password ?</string>
    <string name="user_reset_password">Reset Password</string>
    <string name="user_recover_password_msg">Enter your email below and instructions to reset password or unlock account will be send to the email.</string>
    <string name="user_profile_image">Profile Image</string>
    <string name="user_edit_profile">Edit Profile</string>
    <string name="user_location">Location</string>
    <string name="user_list_title">Users</string>
    <string name="user_profile">Profile </string>
    <string name="user_hint_firstname">First Name</string>
    <string name="user_hint_lastname">Last Name</string>
    <string name="user_hint_location">Location</string>
    <string name="user_hint_gender">I am</string>
    <string name="user_male">Male</string>
    <string name="user_female">Female</string>
    <string name="user_hint_designation">Job Title</string>
    <string name="user_address">Address : </string>
    <string name="user_hint_address">Address</string>
    <string name="user_hint_email">Email</string>
    <string name="user_hint_website">Website</string>
    <string name="user_hint_phone">Phone</string>
    <string name="user_hint_password">Password</string>
    <string name="user_hint_old_password">Old Password</string>
    <string name="user_hint_new_password">New Password</string>
    <string name="user_hint_confirm_password">Confirm Password</string>
    <string name="text_save">Save</string>
    <string name="text_change">Change</string>
    <string name="text_cancel">Cancel</string>
    <string name="role_list_title">Roles</string>
    <string name="role_name">role</string>
    <string name="role_description">description</string>
    <string name="permission_list_title">Permissions</string>
    <string name="privilege_add_title">Add Privilege</string>
    <string name="privilege_add_success">The privilege successfully created </string>
    <string name="privilege_add_error">Error occurred while creating a new privilege. </string>
    <string name="privilege_read_title">Read Privilege</string>
    <string name="privilege_read_error">Error occurred while reading a new privilege. </string>
    <string name="privilege_edit_title">Edit Privilege</string>
    <string name="privilege_edit_success">The privilege has been successfully updated. </string>
    <string name="privilege_edit_error">Error occurred while updating a privilege. </string>
    <string name="privilege_del_title">Delete Privilege</string>
    <string name="privilege_del_question">Are you sure you want to DELETE privilege </string>
    <string name="privilege_del_success">The privilege successfully deleted </string>
    <string name="privilege_del_error">Error occurred while deleting a privilege. </string>
    <string name="privilege_sync_title">Sync Privilege</string>
    <string name="privilege_sync_question">Do you want to SYNCHRONIZE privilege </string>
    <string name="privilege_change_title">Change Privilege</string>
    <string name="privilege_change_question">Do you want to CHANGE privilege </string>
    <string name="privilege_filter_add_title">Filter Entities to Add.</string>
    <string name="privilege_filter_error">Filtering Error.</string>
    <string name="privilege_filter_error_msg">Error in filtering entities…</string>
    <string name="organization_details">Organizations \&amp; Agreements</string>
    <string name="projects">Projects</string>
    <string name="logframes">LogFrames</string>
    <string name="awpb">AWP\&amp;B</string>
    <string name="mel">ME\&amp;L</string>
    <string name="timesheets">Timesheets</string>
    <string name="transactions">Transactions</string>
    <string name="datacollection">Data Collection</string>
    <string name="raid">RAID Log</string>
    <string-array name="status">
        <item>initial</item>
        <item>active</item>
        <item>inactive</item>
        <item>close</item>
    </string-array>
    <string name="duration">Duration:</string>
    <string name="location">location:</string>
    <string name="stakeholders">Stakeholders</string>
    <string name="organization_create_title">CREATE ORGANIZATION</string>
    <string name="organization_members">Organization Members</string>
    <string name="teams">Teams</string>
    <string name="team_role">Team Roles</string>
    <string name="team_name">team</string>
    <string name="team_description">description</string>
    <string name="perms">Permissions</string>
    <string name="perm_role">Permission Menu</string>
    <string name="perm_name">permission</string>
    <string name="perm_description">description</string>
    <string name="impact_list_title">List of Impacts</string>
    <string name="impact_caption">impact</string>
    <string name="outcome_caption">outcome</string>
    <string name="output_list_title">List of Outputs</string>
    <string name="output_caption">output</string>
    <string name="activity_caption">activity</string>
    <string name="input_list_title">Inputs</string>
    <string name="input_caption">input</string>
    <string name="input_number_caption">number required:</string>
    <string name="project_name_hint">Project Name</string>
    <string name="project_description_hint">Project Description</string>
    <string name="project_country_hint">Project Country</string>
    <string name="project_region_hint">Project Region</string>
    <string name="project_status_hint">Project Status</string>
    <string name="project_startdate_hint">Project Starting Date</string>
    <string name="project_closedate_hint">Project Closing Date</string>
    <string name="project_manager_hint">Project Manager</string>
    <string name="sync_category_title">Server Synchronization</string>
    <string name="enable_sync">Enable Auto Sync</string>
    <string name="networktype_category_title">Network Type</string>
    <string name="networktype_title">Choose Network Type</string>
    <string name="devicestate_category_title">Device State</string>
    <string name="device_idle_title">Device Idling </string>
    <string name="device_charging_title">Device Charging </string>
    <string name="device_idle">device_idle</string>
    <string name="device_charging">device_charging</string>
    <string name="syncperiod_category_title">Sync Period</string>
    <string name="syncperiod_title">Choose Sync Period</string>
    <string name="hours_title">Enter Number of Minutes</string>
    <string name="dialog_title">Enter Minutes</string>
    <string name="persist_category_title">Persistence</string>
    <string name="persist_title">Persist Across Reboots</string>
    <string name="persist">persist</string>
</resources>