<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <item
        android:id="@+id/searchItem"
        android:orderInCategory="10"
        android:icon="@drawable/me_search_item"
        android:title="Search"
        app:showAsAction="ifRoom|collapseActionView"
        app:actionViewClass="androidx.appcompat.widget.SearchView"/>

    <!--item
        android:id="@+id/infoItem"
        android:orderInCategory="11"
        android:title="Help" /-->

    <item
        android:id="@+id/uploadItem"
        android:title="@string/Upload"
        app:showAsAction="never"/>
    <item
        android:id="@+id/downloadItem"
        android:title="@string/Download"
        app:showAsAction="never"/>
    <item
        android:id="@+id/deleteItem"
        android:title="@string/Delete"
        app:showAsAction="never"/>
</menu>