<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark">

    <include
        android:id="@+id/progressBar"
        layout="@layout/me_progress_view" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profileCircleImageView"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:src="@drawable/me_default_avatar" />

    <EditText
        android:id="@+id/firstNameEditText"
        style="@style/styleEditText"
        android:layout_below="@+id/profileCircleImageView"
        android:layout_marginTop="20dp"
        android:hint="@string/user_hint_firstname"
        android:inputType="textCapSentences|textAutoCorrect"
        android:minHeight="48dp"
        android:textColorHint="#E8F5E9"
        android:autofillHints="" />

    <EditText
        android:id="@+id/surnameEditText"
        style="@style/styleEditText"
        android:layout_below="@+id/firstNameEditText"
        android:hint="@string/user_hint_lastname"
        android:minHeight="48dp"
        android:textColorHint="@color/lightWhite"
        android:inputType="textCapSentences|textAutoCorrect"
        android:autofillHints="" />

    <EditText
        android:id="@+id/designationEditText"
        style="@style/styleEditText"
        android:layout_below="@+id/surnameEditText"
        android:autofillHints=""
        android:hint="@string/user_hint_designation"
        android:inputType="text"
        android:minHeight="48dp"
        android:textColorHint="@color/lightWhite" />

    <EditText
        android:id="@+id/emailEditText"
        style="@style/styleEditText"
        android:layout_below="@+id/designationEditText"
        android:autofillHints=""
        android:hint="@string/user_hint_email"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:textColorHint="@color/lightWhite" />

    <EditText
        android:id="@+id/passwordEditText"
        style="@style/styleEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/emailEditText"
        android:autofillHints=""
        android:hint="@string/user_hint_password"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:textColorHint="#E8F5E9" />

    <EditText
        android:id="@+id/confirmPasswordEditText"
        style="@style/styleEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/passwordEditText"
        android:autofillHints=""
        android:hint="@string/user_hint_confirm_password"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:textColorHint="@color/lightWhite" />

    <TextView
        android:id="@+id/signUpTextView"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/confirmPasswordEditText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/user_sign_up"
        android:textAppearance="?android:textAppearanceLarge"
        android:textColor="@color/lightWhite"
        android:textStyle="bold" />

    <include
        layout="@layout/me_bottom_layout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/signUpTextView"
        android:layout_marginTop="30dp" />

</RelativeLayout>