<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TableLayout
        android:id="@+id/tableLayoutPermission"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:background="@drawable/me_rounded_corner_white"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:shrinkColumns="*"
        android:stretchColumns="*">

        <TableRow
            android:id="@+id/tableRowOperations"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textViewDeleted"
                android:text="@string/Deleted"
                android:layout_gravity="center"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:typeface="serif"/>

            <TextView
                android:id="@+id/textViewBlocked"
                android:text="@string/Blocked"
                android:layout_gravity="center"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:typeface="serif" />

            <TextView
                android:id="@+id/textViewActivated"
                android:text="@string/Activated"
                android:layout_gravity="center"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:typeface="serif" />

            <TextView
                android:id="@+id/textViewCancelled"
                android:text="@string/Cancelled"
                android:layout_gravity="center"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:typeface="serif" />

            <TextView
                android:id="@+id/textViewPending"
                android:text="@string/Pending"
                android:layout_gravity="center"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:typeface="serif" />

        </TableRow>

        <TableRow
            android:id="@+id/tableRowOwner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/switchDeleted"
                android:layout_gravity="center" />

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/switchBlocked"
                android:layout_gravity="center" />

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/switchActivated"
                android:layout_gravity="center" />

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/switchCancelled"
                android:layout_gravity="center" />

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/switchPending"
                android:layout_gravity="center" />
        </TableRow>
    </TableLayout>
</androidx.constraintlayout.widget.ConstraintLayout>