<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimaryDark">

        <include
            android:id="@+id/progressBar"
            layout="@layout/me_progress_view" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/appCompatImageView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp"
            android:src="@drawable/logo" />

        <EditText
            android:id="@+id/oldPasswordEditText"
            style="@style/styleEditText"
            android:layout_below="@+id/appCompatImageView"
            android:layout_marginTop="50dp"
            android:autofillHints=""
            android:hint="@string/user_hint_old_password"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:textColorHint="@color/lightWhite" />

        <EditText
            android:id="@+id/newPasswordEditText"
            style="@style/styleEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/oldPasswordEditText"
            android:autofillHints=""
            android:hint="@string/user_hint_new_password"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:textColorHint="@color/lightWhite" />

        <EditText
            android:id="@+id/confirmPasswordEditText"
            style="@style/styleEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/newPasswordEditText"
            android:autofillHints=""
            android:hint="@string/user_hint_confirm_password"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:textColorHint="@color/lightWhite" />

        <TextView
            android:id="@+id/changePasswordTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/confirmPasswordEditText"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="40dp"
            android:text="@string/user_confirm_change_password"
            android:textAppearance="?android:textAppearanceLarge"
            android:textColor="@color/lightWhite"
            android:textStyle="bold" />

        <include
            android:id="@+id/loginTextView"
            layout="@layout/me_bottom_layout"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@+id/changePasswordTextView"
            android:layout_marginTop="80dp" />

    </RelativeLayout>
</layout>